--- a/installation/language/fr-FR/joomla.ini
+++ b/installation/language/fr-FR/joomla.ini
@@ -131,7 +131,7 @@ INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_SELECT="Sélectionner"
 INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_LANGUAGE="Paramètres de langue"
 INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_TAG="Tag"
 INSTL_DEFAULTLANGUAGE_COULD_NOT_DOWNLOAD_PACKAGE="Joomla n'a pas réussi à télécharger ou décompresser le pack de langue de&nbsp;: %s"
-INSTL_DEFAULTLANGUAGE_COULD_NOT_INSTALL_LANGUAGE="Le paquet de langue %s n'a pas pu être installé."
+INSTL_DEFAULTLANGUAGE_COULD_NOT_INSTALL_LANGUAGE="Le pack de langue %s n'a pas pu être installé."
 INSTL_DEFAULTLANGUAGE_DESC="Sélectionnez dans la liste des langues installées celle à utiliser par défaut pour l'<strong>interface d'administration</strong> de Joomla!"
 INSTL_DEFAULTLANGUAGE_DESC_FRONTEND="Sélectionnez dans la liste des langues installées celle à utiliser par défaut pour l'<strong>interface frontale</strong> de Joomla!"
 INSTL_DEFAULTLANGUAGE_FRONTEND="Langue par défaut de l'interface frontale (site)"
@@ -196,7 +196,7 @@ JEMAIL="E-mail"
 JERROR="Erreur"
 JERROR_LAYOUT_ERROR_HAS_OCCURRED_WHILE_PROCESSING_YOUR_REQUEST="Une erreur est survenue pendant l'exécution de la requête."
 JGLOBAL_ISFREESOFTWARE="%s est un logiciel libre sous %s"
-JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="Le paquet de langue ne correspond pas à cette version de Joomla. Certaines chaînes peuvent être manquantes et seront affichées en anglais."
+JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="Le pack de langue ne correspond pas à cette version de Joomla. Certaines chaînes peuvent être manquantes et seront affichées en anglais."
 JGLOBAL_SELECT_AN_OPTION="Sélectionner une option"
 JGLOBAL_SELECT_NO_RESULTS_MATCH="Aucun résultat correspondant"
 JGLOBAL_SELECT_SOME_OPTIONS="Sélectionnez certaines options"
@@ -225,13 +225,13 @@ JLIB_FORM_FIELD_INVALID="Champ invalide :&#160;"
 JLIB_FORM_VALIDATE_FIELD_INVALID="Champ invalide : %s"
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Champ requis : %s"
 JLIB_INSTALLER_ABORT="Annulation de l'installation de langues : %s"
-JLIB_INSTALLER_ABORT_CREATE_DIRECTORY="Extension %1$s&#160;: Impossible de créer le répertoire : %2$s"
+JLIB_INSTALLER_ABORT_CREATE_DIRECTORY="Extension %1$s : Impossible de créer le répertoire %2$s"
 JLIB_INSTALLER_ABORT_NOINSTALLPATH="Le chemin d'installation n'existe pas"
-JLIB_INSTALLER_ABORT_PACK_INSTALL_ERROR_EXTENSION="Paquet %1$s : erreur lors de l'installation de l'extension %2$s"
-JLIB_INSTALLER_ABORT_PACK_INSTALL_NO_FILES="Paquet %s : aucun fichier à installer !"
+JLIB_INSTALLER_ABORT_PACK_INSTALL_ERROR_EXTENSION="Pack %1$s : erreur lors de l'installation de l'extension %2$s"
+JLIB_INSTALLER_ABORT_PACK_INSTALL_NO_FILES="Pack %s : il n'y avait aucun fichier à installer !"
 JLIB_INSTALLER_ERROR_FAIL_COPY_FILE="JInstaller: :Install: Erreur de copie du fichier %1$s vers %2$s."
 JLIB_INSTALLER_INSTALL="Installer"
-JLIB_INSTALLER_NOT_ERROR="Si l'erreur est liée à l'installation des fichiers de langue TinyMCE, elle n'a aucun effet sur l'installation de la ou des langue(s) pour Joomla. Certains packs de langue créés avant Joomla 3.2.0 peuvent essayer d'installer des fichiers de langue TinyMCE séparés. Comme ils sont maintenant inclus dans le noyau, ils n'ont plus besoin d'être installés."
+JLIB_INSTALLER_NOT_ERROR="Si l'erreur ci-dessus concerne l'installation de fichiers de langue pour TinyMce, elle n'a pas d'effet sur l'installation de(s) langue(s). Certains packs de langue créés avant la version 3.2.0 de Joomla! peuvent aussi tenter d'installer des fichiers de langue TinyMce. Comme ceux-ci sont dorénavant inclus dans le noyau, ils n'ont plus besoin d'être installés."
 JLIB_INSTALLER_WARNING_UNABLE_TO_INSTALL_CONTENT_LANGUAGE="Impossible de créer une langue de contenu pour la langue %s : %s."
 JLIB_UPDATER_ERROR_OPEN_UPDATE_SITE="Mise à jour : Impossible d'ouvrir le site de mise à jour avec l'ID %d, \"%s\", URL : %s"
 JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Impossible de se connecter à la base de données <br>joomla.library : %1$s - %2$s"
