--- a/installation/language/fr-FR/langmetadata.xml
+++ b/installation/language/fr-FR/langmetadata.xml
@@ -2,7 +2,7 @@
 <metafile client="installation">
 	<name>French (France)</name>
 	<version>4.0.1</version>
-	<creationDate>2021-08-23</creationDate>
+	<creationDate>August 2021</creationDate>
 	<author>Joomla! Project - French translation team</author>
 	<copyright>(C) 2005 Open Source Matters, Inc.</copyright>
 	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
