--- a/api/language/fr-FR/joomla.ini
+++ b/api/language/fr-FR/joomla.ini
@@ -481,7 +481,7 @@ JGLOBAL_ISFREESOFTWARE="/%s est un logiciel libre publié sous la <a href=\"http
 JGLOBAL_ITEM_FEATURE="Article épinglé"
 JGLOBAL_ITEM_UNFEATURE="Article désépinglé"
 JGLOBAL_KEEP_TYPING="Poursuite de l'insertion..."
-JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="Le pack de langue ne correspond pas à cette version de Joomla!, certaines chaînes de traduction peuvent être absentes et seront affichées en anglais."
+JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="Le pack de langue ne correspond pas à cette version de Joomla. Certaines chaînes peuvent être manquantes et seront affichées en anglais."
 JGLOBAL_LEARN_MORE="En savoir plus"
 JGLOBAL_LEAST_HITS="Moins populaires"
 JGLOBAL_LEFT="Gauche"
@@ -938,7 +938,7 @@ JOPTION_REQUIRED="Requis"
 JOPTION_SELECT_ACCESS="- Niveau d'accès -"
 JOPTION_SELECT_AUTHOR="- Auteur -"
 JOPTION_SELECT_AUTHOR_ALIAS="- Pseudo d'auteur -"
-JOPTION_SELECT_AUTHOR_ALIASES="- Pseudos d'auteurs -"
+JOPTION_SELECT_AUTHOR_ALIASES="- Pseudo d'auteurs -"
 JOPTION_SELECT_AUTHORS="- Auteurs -"
 JOPTION_SELECT_CATEGORY="- Catégorie -"
 JOPTION_SELECT_EDITOR="- Éditeur -"
