--- a/administrator/language/fr-FR/joomla.ini
+++ b/administrator/language/fr-FR/joomla.ini
@@ -110,7 +110,7 @@ JOPTIONS="Paramètres"
 JORDERINGDISABLED="Pour réordonner cette liste, cliquez sur l'icône double-flèche en haut de cette colonne."
 JPREV="Précédent"
 JPREVIOUS="Précédent"
-JPREVIOUS_TITLE="Article précédent&nbsp;: %s"
+JPREVIOUS_TITLE="Article précédent : %s"
 JPROTECTED="Protégé"
 JPUBLISHED="Publié"
 JRECORD_NUMBER="Numéro d'enregistrement"
@@ -466,7 +466,7 @@ JGLOBAL_FILTER_GROUPS_DESC="Définit les groupes d'utilisateurs auxquels les fil
 JGLOBAL_FILTER_GROUPS_LABEL="Afficher par groupe"
 JGLOBAL_FILTER_TAGS_DESC="2. Saisissez les balises supplémentaires en séparant chaque nom de balise par un espace ou une virgule. Par exemple : <em>p,div,span</em>."
 JGLOBAL_FILTER_TAGS_LABEL="Filtrer les balises<sup>2</sup>"
-JGLOBAL_FILTER_TYPE_DESC="1. La liste interdite autorise toutes les balises et tous les attributs, à l'exception de ce qui est spécifié.<br /><strong>--</strong> Les balises de la liste interdite par défaut comprennent :  'applet', 'body', 'bgsound', 'base', 'basefont', 'canvas', 'embed', 'frame', 'frameset', 'head', 'html', 'id', 'iframe', 'ilayer', 'layer', 'link', 'meta', 'name', 'object', 'script', 'style', 'title', 'xml'<br /><strong><i>Attributs</i></strong> 'action', 'background', 'codebase', 'dynsrc', 'lowsrc'<br /><strong>--</strong> Les attributs de la liste interdite par défaut incluent : 'action', 'background', 'codebase', 'dynsrc', 'lowsrc', 'formaction'<br><strong>--</strong> Vous pouvez interdire des balises et des attributs supplémentaires en les indiquant dans les champs à disposition, séparés par une virgule.<br><strong>--</strong> La liste personnalisée d'interdictions vous permet de remplacer la liste d'interdictions par défaut. Ajoutez les balises et attributs à interdire dans les champs 'Balises de filtre' et 'Attributs de filtre'.</p><p>La liste autorisée n'autorise que les balises répertoriées dans les champs 'Balises de filtre' et 'Attributs de filtre'.</p><p>Pas de HTML supprime toutes les balises HTML du contenu lorsqu'il est enregistré.</p><p>Veuillez noter que ces paramètres fonctionnent quel que soit l'éditeur que vous utilisez<br />Même si vous utilisez un éditeur WYSIWYG, les paramètres de filtrage permettent de supprimer les balises et les attributs supplémentaires avant d'enregistrer les contenus dans la base de données."
+JGLOBAL_FILTER_TYPE_DESC="<p>1. La liste interdite autorise toutes les balises et tous les attributs, à l'exception de ce qui est spécifié.<br><strong>--</strong> Les balises de la liste des interdictions par défaut sont&#160;: 'applet', 'body', 'bgsound', 'base', 'basefont', 'canvas', 'embed', 'frame', 'frameset', 'head', 'html', 'id', 'iframe', 'ilayer', 'layer', 'link', 'meta', 'name', 'object', 'script', 'style', 'title', 'xml'<br><strong>--</strong> Les attributs de la liste des interdictions par défaut sont&#160;: ''action', 'background', 'codebase', 'dynsrc', 'lowsrc', 'formaction'<br><strong>--</strong> Vous pouvez interdire des balises et des attributs supplémentaires en les indiquant dans les champs à disposition, séparés par une virgule.<br><strong>--</strong> La liste personnalisée d'interdictions vous permet de remplacer la liste d'interdictions par défaut. Ajoutez les balises et attributs à interdire dans les champs 'Balises de filtre' et 'Attributs de filtre'.</p><p>La liste autorisée n'autorise que les balises répertoriées dans les champs 'Balises de filtre' et 'Attributs de filtre'.</p><p>Pas de HTML supprime toutes les balises HTML du contenu lorsqu'il est enregistré.</p><p>Veuillez noter que ces paramètres fonctionnent quel que soit l'éditeur que vous utilisez<br>Même si vous utilisez un éditeur WYSIWYG, les paramètres de filtrage permettent de supprimer les balises et les attributs supplémentaires avant d'enregistrer les contenus dans la base de données.</p>"
 JGLOBAL_FILTER_TYPE_LABEL="Filtrer les types<sup>1</sup>"
 JGLOBAL_FILTERED_BY="Filtré par&nbsp;:"
 JGLOBAL_FULL_TEXT="Texte complet"
@@ -600,7 +600,7 @@ JGLOBAL_SELECTION_NONE="Effacer la sélection"
 JGLOBAL_SHOW_ASSOCIATIONS_DESC="Multilingue seulement. Affiche/Masque les drapeaux des articles associés ou le Code de langue URL."
 JGLOBAL_SHOW_ASSOCIATIONS_LABEL="Associations multilingues"
 JGLOBAL_SHOW_AUTHOR_DESC="Afficher/Masquer le nom de l'auteur de l'article."
-JGLOBAL_SHOW_AUTHOR_LABEL="Auteurs de l'article"
+JGLOBAL_SHOW_AUTHOR_LABEL="Auteur"
 JGLOBAL_SHOW_CATEGORY_DESC="Afficher/Masquer le titre de la catégorie de l'article."
 JGLOBAL_SHOW_CATEGORY_DESCRIPTION_DESC="Afficher/Masquer la description des catégories."
 JGLOBAL_SHOW_CATEGORY_DESCRIPTION_LABEL="Description"
@@ -859,7 +859,7 @@ JHELP_EXTENSIONS_TEMPLATE_MANAGER_STYLES_EDIT="Templates:_Edit_Style"
 JHELP_EXTENSIONS_TEMPLATE_MANAGER_TEMPLATES="Templates:_Templates"
 JHELP_EXTENSIONS_TEMPLATE_MANAGER_TEMPLATES_EDIT="Templates:_Customise"
 JHELP_EXTENSIONS_TEMPLATE_MANAGER_TEMPLATES_EDIT_SOURCE="Templates:_Customise_Source"
-JHELP_GLOSSARY="Glossaire"
+JHELP_GLOSSARY="Glossary"
 JHELP_MENUS_MENU_ITEM_ARTICLE_ARCHIVED="Menu_Item:_Article_Archived"
 JHELP_MENUS_MENU_ITEM_ARTICLE_CATEGORIES="Menu_Item:_List_All_Categories"
 JHELP_MENUS_MENU_ITEM_ARTICLE_CATEGORY_BLOG="Menu_Item:_Category_Blog"
@@ -1126,8 +1126,11 @@ JTABLE_OPTIONS_ORDERING="Trier par&nbsp;:"
 ; States assets translations
 ARCHIVE="Archives"
 ARCHIVED="Archivé"
+FEATURE="Épingler"
+UNFEATURE="Désépingler"
 PUBLISH="Publier"
 PUBLISHED="Publié(s)"
+PUBLISH_AND_FEATURE="Publier & Épingler"
 TRASH="Corbeille"
 TRASHED="Dans la corbeille"
 UNPUBLISH="Dépublier"
